# Speek

./: .gitignore  .gitmodules  .travis.yml  API.md  BUILDING.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md
contrib/: README.sandboxing
debian/: changelog  control  copyright  install  rules
debian/icons/: generate_icons
doc/: design.md  manpage  protocol.md
packaging/linux/arch/: PKGBUILD
packaging/mac_dmg/: appdmg.json  speek-drive.icns
packaging/windows_nsis/: installer.nsi
reference_implementation_api/: README.md  ascii_art_image.py  speek.py
src/: EULA  LICENSE  qtquickcontrols2.conf  tego.pro
src/libtego/: libtego.pro
src/libtego/source/: context.cpp  context.hpp  error.hpp  file_hash.hpp  precomp.h  signals.cpp  signals.hpp  tor.cpp  tor.hpp  tor_stubs.cpp  torrc.hpp
src/libtego_ui/: libtego_callbacks.cpp  libtego_ui.pri  libtego_ui.pro  pluggables.hpp  precomp.hpp
src/libtego_ui/SCodes/: CMakeLists.txt  SBarcodeDecoder.cpp  SBarcodeDecoder.h  SBarcodeFilter.cpp  SBarcodeFilter.h  SBarcodeFormat.cpp  SBarcodeFormat.h  SBarcodeGenerator.cpp  SBarcodeGenerator.h  SCodes.pri  qvideoframeconversionhelper_p.h
src/libtego_ui/SCodes/zxing-cpp/example/: ZXingQtReader.cpp
src/libtego_ui/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  qioapi.cpp  quaadler32.h  quachecksum32.h  (+17 more)
src/qmake_includes/: artifacts.pri  compiler_flags.pri  openssl.pri  protobuf.pri
src/tego_group/: Info.plist  main.cpp  tego_group.pro
src/tego_ui/: Info.plist  backgrounds.qrc  emoji.qrc  fonts.qrc  main.cpp  precomp.hpp  speek.desktop  tego_ui.pro  themes.qrc
(+264 files in other folders)
